# fpl-scrapper

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json  vitest.config.ts
config/: .env.example  settings.py  settings.ts
docs/: API.md  OPENCLAW.md  README.md  SCHEMA.md  SETUP.md
openspec/changes/migrate-to-ts/: design.md  proposal.md  tasks.md
src/: api.py  api.ts  auth.py  auth.ts  database.py  database.ts  errors.ts  logger.py  logger.ts  main.py  main.ts  models.py  models.ts  scraper.py  scraper.ts  sync.py  sync.ts  transform.py  transform.ts  types.ts
tests/: python_oracle.py  test_api.ts  test_auth.ts  test_database.py  test_database.ts  test_errors.ts  test_logger.ts  test_main.ts  test_models.ts  test_parity.ts  test_scraper.py  test_scraper.ts  test_settings.ts  test_sync.py  test_sync.ts  test_transform.py  test_transform.ts  test_webapp_api.ts  test_webapp_app.ts  test_webapp_db.ts  test_webapp_images.ts  test_webapp_main.ts  test_webapp_pages.ts
tests/fixtures/: bootstrap_static.json  element_summary_318.json  event_25_live.json  fixtures.json
tests/oracles/: sync-partial.json  sync-success.json  transform.json
webapp/: README.md  __init__.py  __main__.py  app.py  app.ts  db.py  db.ts  images.py  images.ts  requirements.txt  server.ts
webapp/routers/: api.py  api.ts  pages.py  pages.ts
webapp/static/css/: app.css
webapp/static/js/: charts.js
webapp/templates/: base.html  compare.html  dashboard.html  player_detail.html  players.html  team_detail.html  teams.html
(+3 files in other folders)
